// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  save
</div>
`;

exports[`match snapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  Hi 
  Click me Please
</div>
`;
